# analytic-engine-rl

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.cpp
docs/: graph_legend.html  index.html  md_README.html  pages.html
docs/search/: all_0.js
include/: ActuatorBase.h  analytic-engine-agent-supervised.cpp  analytic-engine-environment.h  analytic-engine-rl.h  analytic-engine-sensor.h  app.h  declares.h  metric.h  plot-pattern-state.h  plot-pattern.h
src/: ActuatorBase.cpp  CMakeLists.txt  analytic-engine-environment.cpp  analytic-engine-sensor.cpp  app.cpp  declares.cpp  plot-pattern-state.cpp  plot-pattern.cpp
test/: CMakeLists.txt
test/data/: config.json
test/src/: first-order-test.cpp
